create chart table
