# models/chart.js
@@ -3,23 +3,20 @@ const {
   Model
 } = require('sequelize');
 module.exports = (sequelize, DataTypes) => {
-  class Chart extends Model {
-    /**
-     * Helper method for defining associations.
-     * This method is not a part of Sequelize lifecycle.
-     * The `models/index` file will call this method automatically.
-     */
+  class chart extends Model {
     static associate(models) {
-      // define association here
     }
   }
-  Chart.init({
-    userID: DataTypes.STRING,
-    name: DataTypes.STRING,
-    configData: DataTypes.JSONB
+  chart.init({
+    userId: DataTypes.INTEGER,
+    name:DataTypes.STRING,
+    configuration: DataTypes.JSON
   }, {
     sequelize,
-    modelName: 'Chart',
-  });
-  return Chart;
+    modelName: 'chart',
+    timestamps: false,
+    tableName: 'chart',
+  }
+  );
+  return chart;
 };
